<resources>
    <string name="app_name">Smart Health Tracker</string>
    <string name="title_activity_settings">Settings</string>

    <string name="enable_discoverable1">Enable Discoverable</string>
    <string name="on_off3">ON/OFF</string>
    <string name="enable_discoverable">Enable Discoverable</string>
    <string name="password1">Password</string>
    <string name="log_in">Log In</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo1">TODO</string>
    <string name="signup">Signup</string>
    <string name="login_page">LogIn</string>
    <string name="SignUp">SignUp</string>
    <string name="LogIn">LogIn</string>
    <string name="stay_fit">Stay Fit</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="let_s_get_started_land">Let\'s Get Started</string>
    <string name="stay_fit_land">Stay Fit</string>
    <string name="age1">Age</string>
    <string name="gender1">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="d_o_b1">D.O.B</string>
    <string name="habibi22">habibi22</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="heart_rate">heart_rate</string>
    <string name="distance">distance</string>
    <string name="cl_hr">cl_hr</string>
    <string name="steps">steps</string>
    <string name="todo">TODO</string>
    <string name="GndTxt">Gender</string>
    <string name="WgtTxt">Weight</string>
    <string name="HgtTxt">Height</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight1">Weight</string>
    <string name="height1">Height</string>
    <string name="d_o_b">D.O.B</string>
    <string name="save">Save</string>
    <string name="BldGrpTxt">Blood Group</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password2">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="profile">Profile</string>
    <string name="on_off_device">On/Off</string>
    <string name="error_invalid_email">Error Invalid Email</string>
    <string name="error_field_required">Erroe Field Required</string>
    <string name="error_invalid_password">Error Invalid Password</string>
    <string name="permission_rationale">Permission</string>
    <string name="title_activity_login">Sign In</string>
    <string name="Language">language</string>
    <string name="french">French</string>
    <string name="language">Language</string>


</resources>
