<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="115dp"
            android:layout_height="458dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/AgeEtxt"
                android:layout_width="99dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/age"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/GndTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/WgtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/weight1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/usrheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/height1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/DoBTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/d_o_b"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/BldGrpTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/BldGrpTxt"
                android:textSize="20sp"
                tools:text="Blood Group" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/language"
                android:textSize="20sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="458dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_toEndOf="@+id/linearLayout"
            android:layout_toRightOf="@+id/linearLayout"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            tools:layout_editor_absoluteY="0dp">


            <EditText
                android:id="@+id/textage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType=""
                tools:targetApi="o" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="" />

            <EditText
                android:id="@+id/WgtNmb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="" />

            <EditText
                android:id="@+id/heightx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="" />

            <EditText
                android:id="@+id/dobtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />


            <EditText
                android:id="@+id/bldtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />


            <CheckBox
                android:id="@+id/mbox_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/french"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="22sp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="0dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0" />


</RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>